syntax = "proto3";

package jobPost;
import "common.proto";

message CreateJobPostInput {
  string userId = 1;
  string title = 2;
  repeated JobCategory jobCategories = 3;
  WorkPeriodInput workPeriod = 4;
  WorkTimeInput workTime = 5;
  SalaryInput salary = 6;
  repeated string photos = 7; // Optional
  string detailedDescription = 8;
  string addressName = 9;
}

message CreateJobPostResponse {
  string id = 1;
  string addressName = 2; // 실제로 저장된 주소의 이름이 반환됨
  string createdAt = 3;
}